--- a/.github/workflows/build-and-test.yml
+++ b/.github/workflows/build-and-test.yml
@@ -50,13 +50,19 @@ jobs:
           git diff --quiet && git diff --staged --quiet || git commit -m "style: auto-format code with Black"
           git push origin HEAD:${{ github.ref_name }}
 
-      - name: Run HTTP Integration Tests
+      - name: Run tests with coverage (unittest)
         run: |
           source .venv/bin/activate
-          uv run python -m unittest discover -s tests -v
+          uv pip install coverage
+          coverage run -m unittest discover -s tests -v
+          mkdir -p coverage_reports
+          coverage xml -o coverage_reports/coverage.xml
+          coverage report -m
 
       - name: Upload coverage reports to Codecov
         uses: codecov/codecov-action@v5
         with:
           token: ${{ secrets.CODECOV_TOKEN }}
           slug: SoftwareVerse/userverse-python-client
+          files: coverage_reports/coverage.xml
+          fail_ci_if_error: true
