--- a/pyproject.toml
+++ b/pyproject.toml
@@ -9,6 +9,8 @@ authors = [
 requires-python = ">=3.12"
 dependencies = [
     "black>=25.9.0",
+    "fastapi>=0.119.0",
+    "requests>=2.32.5",
 ]
 
 [build-system]
