--- a/pyproject.toml
+++ b/pyproject.toml
@@ -11,8 +11,12 @@ dependencies = [
     "black>=25.9.0",
     "fastapi>=0.119.0",
     "requests>=2.32.5",
+    "shared-models",
 ]
 
 [build-system]
 requires = ["hatchling"]
 build-backend = "hatchling.build"
+
+[tool.uv.sources]
+shared-models = { git = "https://github.com/SoftwareVerse/softwareVerse-shared-python-utils.git", rev = "v0.1.8" }
