--- a/.github/workflows/build-and-test.yml
+++ b/.github/workflows/build-and-test.yml
@@ -1,7 +1,10 @@
 name: CI - Integration Tests with uv
 
 on:
-  push:
+  # push:
+  #   branches: [main]
+
+  pull_request:
     branches: [main]
 
 permissions:
@@ -54,7 +57,7 @@ jobs:
         run: |
           source .venv/bin/activate
           uv pip install coverage
-          coverage run -m unittest discover -s tests -v
+          coverage run -m pytest
           mkdir -p coverage_reports
           coverage xml -o coverage_reports/coverage.xml
           coverage report -m
