--- a/.github/workflows/build-and-test.yml
+++ b/.github/workflows/build-and-test.yml
@@ -48,10 +48,17 @@ jobs:
 
       - name: Commit and Push formatting changes
         run: |
-          git pull
+          git checkout "${GITHUB_REF_NAME}"
+          git pull origin "${GITHUB_REF_NAME}"
+
           git add .
-          git diff --quiet && git diff --staged --quiet || git commit -m "style: auto-format code with Black"
-          git push origin HEAD:${{ github.ref_name }}
+          if ! git diff --cached --quiet; then
+            git commit -m "style: auto-format code with Black"
+            git push origin "${GITHUB_REF_NAME}"
+          else
+            echo "No formatting changes to commit"
+          fi
+
 
       - name: Run tests with coverage (unittest)
         run: |
