--- a/.github/workflows/build-and-test.yml
+++ b/.github/workflows/build-and-test.yml
@@ -47,14 +47,21 @@ jobs:
           git remote set-url origin https://x-access-token:${{ secrets.GITHUB_TOKEN }}@github.com/${{ github.repository }}
 
       - name: Commit and Push formatting changes
+        if: github.event.pull_request.head.repo.full_name == github.repository
+        env:
+          BRANCH_NAME: ${{ github.head_ref }}
         run: |
-          git checkout "${GITHUB_REF_NAME}"
-          git pull origin "${GITHUB_REF_NAME}"
+          echo "Pushing to PR branch: ${BRANCH_NAME}"
+
+          # Ensure we have the branch locally (checkout in PR runs can be detached)
+          git fetch origin "${BRANCH_NAME}:${BRANCH_NAME}"
+          git checkout "${BRANCH_NAME}"
+          git pull origin "${BRANCH_NAME}"
 
           git add .
           if ! git diff --cached --quiet; then
             git commit -m "style: auto-format code with Black"
-            git push origin "${GITHUB_REF_NAME}"
+            git push origin "${BRANCH_NAME}"
           else
             echo "No formatting changes to commit"
           fi
