--- a/.github/workflows/build-and-test.yml
+++ b/.github/workflows/build-and-test.yml
@@ -67,10 +67,10 @@ jobs:
           fi
 
 
-      - name: Run tests with coverage (unittest)
+      - name: Run tests with coverage (pytest)
         run: |
           source .venv/bin/activate
-          uv pip install coverage
+          uv pip install coverage pytest
           coverage run -m pytest
           mkdir -p coverage_reports
           coverage xml -o coverage_reports/coverage.xml
